--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,12 @@ cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 project(${ENGINE_NAME})
 add_executable(${ENGINE_NAME} src/main.cpp)
 
-# Settings for glwf
+# Settings for glfw
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
-
-add_subdirectory(external/glwf)
-target_link_libraries(${ENGINE_NAME} GLFW)
+add_subdirectory(external/glfw)
+target_link_libraries(${ENGINE_NAME} glfw)
+add_subdirectory(external/glad)
+target_link_libraries(${ENGINE_NAME} GLAD)
